# ShopSage-KB

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: import_router.py  query_router.py
core/: deps.py  paths.py
docs/: architecture.drawio  interview_qa_breakdown.md
front/: import.html
processor/import_process/: base.py  config.py  main_graph.py  state.py
processor/import_process/nodes/: bge_embedding_chunks_node.py  document_split_node.py  entry_node.py  import_milvus_node.py  item_name_recognition_node.py  kg_graph_node.py  md_img_node.py  new_document_split_node.py  pdf_to_md_node.py
processor/import_process/output_temp_dir/: chunks.json
processor/import_process/prompts/: knowledge_graph_prompt.py
processor/query_process/: base.py  config.py  exceptions.py  main_graph.py  state.py
processor/query_process/nodes/: answer_output_node.py  (+7 more)
prompts/: import_prompts.py  query_prompts.py
service/: import_file_service.py  query_service.py  task_service.py
test/: 3_14_test.py  BGE_M3_test.py  docker_test.py  fast_mcp_dashscope.py  filter_test.py  hybrid_search_test.py  import_graph_test.py  langchain_markdown_spliter_test.py  mongo_connetction.py  neo4j_test.py  pymilvus_test.py  reranker_single_pair_test.py  split_by_headings_rewrite_test.py  test_hierarchy.md  torch_test.py  tuple_test.py
utils/: bge_m3_embedding_util.py  bge_me_embedding_util.py  bge_reranker_util.py  llm_util.py  markdown_util.py  milvus_util.py  minio_util.py  mongo_history_util.py  neo4j_util.py  sse_util.py  task_util.py
(+11 files in other folders)
