[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "grandalf>=0.8",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "minio>=7.2.20",
    "neo4j>=6.1.0",
    "openai-agents>=0.10.1",
    "pip>=26.0.1",
    "pymilvus>=2.6.9",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.16.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0,<5.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
